Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-21362

[Reg 4.7->4.8] Debugger looks like being interrupted when it isn't

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 4.8.0-beta2
    • Qt Creator 4.8.0-beta1
    • Debugger
    • None
    • 18e73a738be659bbc33306d800324a89c34b8f17 (qt-creator/qt-creator/4.8)

      Open a project, set a breakpoint, start debugging.
      Hit the breakpoint and continue.
      Then switch the debugger view to "preset", and back to the debugger run.

      The debugger jumps to the location where it previously had stopped, and shows a yellow arrow before that line, as if it were interrupted at that location. But the application is actually still running, not interrupted, the backtrace is completely grayed (as it should).

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hjk hjk
            con Eike Ziller
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes